--- a/course/Gemfile
+++ b/course/Gemfile
@@ -8,6 +8,8 @@ gem 'coffee-rails', '~> 4.2'
 gem 'jquery-rails'
 gem 'turbolinks', '~> 5'
 gem 'jbuilder', '~> 2.5'
+gem 'bootstrap', '~> 4.3.1'
+gem 'devise', '~> 4.6', '>= 4.6.2'
 
 
 group :development, :test do
